--- a/index.html
+++ b/index.html
@@ -35,6 +35,42 @@
                     <label for="Email"> Email address:</label>
                     <input type ="text" id="Email" name = "Email">
                 </fieldset>
+
+
+                <fieldset> 
+                    <legend> Select Pickup or Delivery </legend>
+                    <label for="pickup"> 
+                        <input type ="radio" id="pickup" name="method" value = "pickup"> pickup
+                    </label>
+                    <label for="Delivery"> 
+                        <input type ="radio" id="Delivery" name="method" value = "Delivery "> Delivery
+                    </label>
+                </fieldset>
+
+                <!-- Pizza Size -->
+                <fieldset>
+                    <legend> Pizza Size</legend>
+                    <select id = "size" name = "size">
+                        <option value = "none"> --- select a size ---</option>
+                        <option value = "small"> Small </option>
+                        <option value = "medium"> Medium </option>
+                        <option value = "large"> Large </option>
+                    </select>
+                </fieldset>
+                
+                <!-- toppings -->
+                <fieldset> 
+                    <legend> Select Pickup or Delivery </legend>
+                    <label for="pepperoni"> 
+                        <input type ="checkbox" id="pepperoni" name="toppings[]" value = "pepperoni"> pepperoni
+                    </label>
+
+                    <label for="pineapple"> 
+                        <input type ="checkbox" id="pineapple" name="toppings[]" value = "pineapple "> pineapple
+                    </label>
+                </fieldset>
+                <!-- add an order button -->
+                <button type = "submit"> Place Order </button>
             </form>
         </main>
     </body>
